fixed horizontal scrollbar

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -30,7 +30,7 @@
   line-height: 1.6;
   color: aliceblue;
   width: 100%;
-  padding: 20px;
+  padding: 20px 0px;
   display: flex;
   min-height: 500px;
   justify-content: space-evenly;
